--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,10 +71,10 @@ version = { attr = "exo.__version__" }
 
 [dependency-groups]
 dev = [
-    "Pillow>=11.2",
     "build>=1.2",
     "coverage[toml]>=7.10.0",
     "numpy>=1.26",
+    "pillow>=11.3",
     "pytest-cov>=6.1",
     "pytest-xdist>=3.7",
     "pytest>=8.3",
